ionos_sbx/caddy-proxy/caddy-reverse-proxy/acme-http-solver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: acme-http-solver
  labels: { app: acme-http-solver }
spec:
  type: ClusterIP
  selector:
    acme.cert-manager.io/http01-solver: "true"
  ports:
    - { name: http, port: 8089, targetPort: 8089, protocol: TCP }
