ionos_sbx/caddy-proxy/caddy-reverse-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: caddy-reverse-proxy-balancer
  labels: { app: caddy-reverse-proxy }
  annotations:
    cloud.ionos.com/node-selector: cloud.ionos.com/nodepool-name=ingress-pool
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  loadBalancerIP: 87.106.161.151
  selector: { app: caddy-reverse-proxy }
  ports:
    - { name: https, port: 443, targetPort: https, protocol: TCP }
    - { name: http,  port: 80,  targetPort: http,  protocol: TCP }
