ionos_sbx/caddy-proxy/caddy-reverse-proxy/networkpolicy-acme-solver.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: acme-http-solver
spec:
  podSelector:
    matchLabels: { acme.cert-manager.io/http01-solver: "true" }
  policyTypes: ["Ingress"]
  ingress:
    - from:
        - podSelector:
            matchLabels: { app: caddy-reverse-proxy }
      ports:
        - { port: 8089, protocol: TCP }
